# pixelate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pixelate/: __init__.py  __main__.py  animation.py  ascii_art.py  cli.py  colorspace.py  core.py  dithering.py  effects.py  image_safety.py  lut.py  palette_io.py  palettes.py  ui.py
tests/: test_animation.py  test_auto_palette.py  test_colorspace.py  test_compare.py  test_core.py  test_dithering.py  test_effects.py  test_image_safety.py  test_palette_export.py  test_palette_io.py  test_palettes.py  test_report.py  test_scale.py
